prevent wrapping in progress bar

--- a/desktop/css/styles.pcss
+++ b/desktop/css/styles.pcss
@@ -407,6 +407,7 @@
 	.progress_bar__donation_text {
 		color: #ffffff;
 		line-height: 1.8em;
+		white-space: nowrap;
 	}
 
 	.progress_bar__donation_remaining {
